@startuml

title __WEBSERVICE's Class Diagram__\n

  namespace  {
    namespace om.example.srp.demosrpgamemanager {
      namespace webservice {
        class com.example.srp.demosrpgamemanager.webservice.GameSessionController {
            + login()
            + signUp()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.srp.demosrpgamemanager {
      namespace webservice {
        class com.example.srp.demosrpgamemanager.webservice.PlayerActionController {
            + fire()
            + move()
            + rest()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.srp.demosrpgamemanager {
      namespace webservice {
        class com.example.srp.demosrpgamemanager.webservice.PlayerController {
            + getHighScore()
            + getName()
        }
      }
    }
  }
  

  com.example.srp.demosrpgamemanager.webservice.GameSessionController o-- com.example.srp.demosrpgamemanager.manager.session.LoginManager : loginManager
  com.example.srp.demosrpgamemanager.webservice.GameSessionController o-- com.example.srp.demosrpgamemanager.manager.session.SignUpManager : signUpManager
  com.example.srp.demosrpgamemanager.webservice.PlayerActionController o-- com.example.srp.demosrpgamemanager.manager.action.FireManager : fireManager
  com.example.srp.demosrpgamemanager.webservice.PlayerActionController o-- com.example.srp.demosrpgamemanager.manager.action.MoveManager : moveManager
  com.example.srp.demosrpgamemanager.webservice.PlayerActionController o-- com.example.srp.demosrpgamemanager.manager.action.RestManager : restManager
  com.example.srp.demosrpgamemanager.webservice.PlayerController o-- com.example.srp.demosrpgamemanager.manager.player.NameManager : nameManager
  com.example.srp.demosrpgamemanager.webservice.PlayerController o-- com.example.srp.demosrpgamemanager.manager.player.ScoreManager : scoreManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
